fixing spacing across site

--- a/sites/all/themes/custom/flight_city/sass/_variables.sass
+++ b/sites/all/themes/custom/flight_city/sass/_variables.sass
@@ -82,10 +82,10 @@ $font-size-small: rem-calc(12)
 // --------------------------
 
 $icon-area-dimension: 80px
-$icon-area-font-size: rem-calc(45)
+$icon-area-font-size: rem-calc(40)
 
 $small-icon-area-dimension: 60px
-$small-icon-area-font-size: rem-calc(40)
+$small-icon-area-font-size: rem-calc(30)
 
 
 
@@ -106,8 +106,8 @@ $medium-region-pad-large: rem-calc(25)
 $small-main-spacing: rem-calc(40)
 $medium-main-spacing: rem-calc(40)
 
-$small-main-block-spacing: rem-calc(55)
-$medium-main-block-spacing: rem-calc(55)
+$small-main-block-spacing: rem-calc(45)
+$medium-main-block-spacing: rem-calc(45)
 
 
 // Foundation by ZURB
