--- a/sites/all/themes/custom/flight_city/sass/modules/_block.sass
+++ b/sites/all/themes/custom/flight_city/sass/modules/_block.sass
@@ -21,4 +21,4 @@
   .bean-image-collection
 
     .more-link
-      top: rem-calc(-57)
+      top: rem-calc(-63)
