--- a/sites/all/themes/custom/flight_city/sass/theme/_front-pages.sass
+++ b/sites/all/themes/custom/flight_city/sass/theme/_front-pages.sass
@@ -20,10 +20,11 @@
   
   &:not(.domain-main)
     .block-views-news-block,
-    .block[class$="featured-programs"]
+    .block[class*="featured-programs"]
       +block-with-top-border()
 
     .l-content-bottom-1
+      padding-top: 0
       +nice-row-border($column-gutter/2, $small-main-block-spacing/2, 1px solid $gray, top, hidden)
 
 
@@ -71,6 +72,9 @@
     &:before
       display: none
 
+    .block
+      margin-bottom: 0
+
   .content-bottom-full
     //max-width: $row-width
     //padding: $medium-main-spacing 0
@@ -89,13 +93,13 @@
       text-align: center
 
   .triptych-first .block
-    +fake-icon-circle-box($red, 'map-marker', '.block-title', small)
+    +fake-icon-circle-box($red)
 
   .triptych-middle .block
-    +fake-icon-circle-box($blue, 'map-marker', '.block-title', small)
+    +fake-icon-circle-box($blue)
 
   .triptych-last .block
-    +fake-icon-circle-box($orange, 'map-marker', '.block-title', small)
+    +fake-icon-circle-box($orange)
 
 
 .block-bean-front-mayor-links
@@ -144,7 +148,7 @@
   .front.domain-main
 
     .block-views-news-block-4
-      +block-with-top-border()
+      +block-with-top-border(medium)
 
     .content-bottom-triple-left
       padding-right: rem-calc(35)
