--- a/sites/all/themes/custom/flight_city/sass/theme/_icon-box.sass
+++ b/sites/all/themes/custom/flight_city/sass/theme/_icon-box.sass
@@ -91,6 +91,12 @@
 
 +respond($medium-up)
 
+  // Just Wrapper 
+  .field-collection-item-field-link-collection,
+  .vocabulary-event-category.view-mode-teaser,
+  .vocabulary-faq-category.view-mode-teaser
+    margin-bottom: 0
+
   // Side by side views
   // --------------------------
 
